EmployerResourceTest complete