@@ -3,14 +3,11 @@ import org.hibernate.Transaction;
 import org.junit.Before;
 import org.junit.Test;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.transaction.annotation.Transactional;
-import ru.hh.nab.common.properties.FileSettings;
 import ru.hh.school.dao.EmployerDao;
+import ru.hh.school.dto.EmployerDtoById;
 import ru.hh.school.dto.FavoriteEmployerDto;
-import ru.hh.school.entity.Area;
-import ru.hh.school.entity.Employer;
-import ru.hh.school.entity.Popularity;
-import ru.hh.school.service.ApiService;
+import ru.hh.school.entity.*;
+import ru.hh.school.util.EmployerMapper;
 
 import javax.inject.Inject;
 import javax.persistence.NoResultException;
@@ -20,10 +17,12 @@ import java.io.IOException;
 import java.net.http.HttpResponse;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.*;
+import java.util.stream.IntStream;
 
 import static org.junit.Assert.*;
 import static org.mockito.Mockito.when;
@@ -34,13 +33,10 @@ public class EmployerResourceTest extends AppBaseTest {
     private final Map<String, String> parametersMap = new HashMap<>();
 
     @Inject
-    private ApiService apiService;
-
-    @Inject
     private EmployerDao employerDao;
 
     @Inject
-    private FileSettings fileSettings;
+    private EmployerMapper employerMapper;
 
     @Before
     public void init() throws IOException {
@@ -58,50 +54,49 @@ public class EmployerResourceTest extends AppBaseTest {
 
     @Test
     public void postSingleFavoriteEmployerShouldSaveEntityToDatabase() throws IOException {
-        HttpResponse response = saveSingleEmployerToDatabase();
+        HttpResponse response = saveSingleEmployerToDatabase("/employer.json");
         assertEquals(200, response.statusCode());
+
         Employer employer = employerDao.getEager(employerId);
-        assertEquals(employerId, employer.getId());
-        assertEquals("Black Wood", employer.getName());
-        assertEquals("Random description", employer.getDescription());
+        EmployerDtoById jsonEmployer = getEmployerDtoFromJson("/employer.json");
+        assertDtoFromJsonAndEntityAreSame(jsonEmployer, employer);
         assertEquals(0, (int) employer.getViewsCount().getCounter());
-        assertEquals(1381, employer.getArea().getId());
-        assertEquals("Black", employer.getArea().getName());
-        assertEquals("New comment", employer.getComment().getComment());
+        assertEquals(DEFAULT_COMMENT, employer.getComment().getComment());
     }
 
     @Test
     public void postSameFavoriteEmployerTwiceShouldReturnBadRequestStatus() throws IOException {
-        HttpResponse first = saveSingleEmployerToDatabase();
+        HttpResponse first = saveSingleEmployerToDatabase("/employer.json");
         assertEquals(200, first.statusCode());
-        HttpResponse second = saveSingleEmployerToDatabase();
+        HttpResponse second = saveSingleEmployerToDatabase("/employer.json");
         assertEquals(400, second.statusCode());
     }
 
     @Test
     public void getFavoriteEmployerEndpointWithEmptyTableReturnsEmptyList() {
         Response response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>(){});
+        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>() {
+        });
         assertEquals(200, response.getStatus());
         assertEquals(0, employers.size());
     }
 
     @Test
     public void getFavoriteEmployerEndpointWithNonEmptyTableReturnsListOfValidDto() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase();
+        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
         assertEquals(200, postResponse.statusCode());
         Response response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>(){});
         assertEquals(200, response.getStatus());
-        assertEquals(1, employers.size());
+
+        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>() {
+        });
         FavoriteEmployerDto employer = employers.get(0);
-        assertEquals(employerId, employer.getId());
-        assertEquals("Black Wood", employer.getName());
-        assertEquals("Random description", employer.getDescription());
+        EmployerDtoById jsonEmployer = getEmployerDtoFromJson("/employer.json");
+        assertEquals(1, employers.size());
+
+        assertDtoFromJsonAndDtoFromResponseAreSame(jsonEmployer, employer);
         assertEquals(1, employer.getViewsCount());
-        assertEquals(1381, employer.getArea().getId());
-        assertEquals("Black", employer.getArea().getName());
-        assertEquals("New comment", employer.getComment());
+        assertEquals(DEFAULT_COMMENT, employer.getComment());
         assertEquals(Popularity.REGULAR, employer.getPopularity());
     }
 
@@ -110,143 +105,135 @@ public class EmployerResourceTest extends AppBaseTest {
         saveMultipleEmployersToDatabase(30);
         //Default parameters
         Response defaultParamsResponse = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        List<FavoriteEmployerDto> employers = defaultParamsResponse.readEntity(new GenericType<>(){});
+        List<FavoriteEmployerDto> employers = defaultParamsResponse.readEntity(new GenericType<>() {
+        });
         assertEquals(200, defaultParamsResponse.getStatus());
         assertEquals(20, employers.size());
         assertEquals(1, employers.get(0).getId());
         assertEquals(20, employers.get(19).getId());
         //Per page = 25
         Response perPage25Response = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?per_page=25");
-        employers = perPage25Response.readEntity(new GenericType<>(){});
+        employers = perPage25Response.readEntity(new GenericType<>() {
+        });
         assertEquals(200, perPage25Response.getStatus());
         assertEquals(25, employers.size());
         assertEquals(1, employers.get(0).getId());
         assertEquals(25, employers.get(24).getId());
         //Per page = 5
         Response perPage5Response = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?per_page=5");
-        employers = perPage5Response.readEntity(new GenericType<>(){});
+        employers = perPage5Response.readEntity(new GenericType<>() {
+        });
         assertEquals(200, perPage5Response.getStatus());
         assertEquals(5, employers.size());
         assertEquals(1, employers.get(0).getId());
         assertEquals(5, employers.get(4).getId());
         //Page = 2
         Response page2Response = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?page=1");
-        employers = page2Response.readEntity(new GenericType<>(){});
+        employers = page2Response.readEntity(new GenericType<>() {
+        });
         assertEquals(200, page2Response.getStatus());
         assertEquals(10, employers.size());
         assertEquals(21, employers.get(0).getId());
         assertEquals(30, employers.get(9).getId());
         //Page = 4 And Per Page = 5
         Response page4PerPage5Response = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?page=4&per_page=5");
-        employers = page4PerPage5Response.readEntity(new GenericType<>(){});
+        employers = page4PerPage5Response.readEntity(new GenericType<>() {
+        });
         assertEquals(200, page4PerPage5Response.getStatus());
         assertEquals(5, employers.size());
         assertEquals(21, employers.get(0).getId());
         assertEquals(25, employers.get(4).getId());
+        //Page = 96 And Per Page = 21
+        Response depthTestResponse = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?page=96&per_page=21");
+        assertEquals(400, depthTestResponse.getStatus());
+        System.out.println(depthTestResponse.readEntity(String.class));
     }
 
     @Test
     public void getFavoriteEmployerEndpointShouldIncrementCounterByOne() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase();
+        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
         assertEquals(200, postResponse.statusCode());
-        Response response = null;
-        for (int i = 0; i < 20; i ++) {
-            response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        }
-        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>(){});
+
+        IntStream.range(0, 20).forEach(i -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
+        Response response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
+        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>() {
+        });
+        FavoriteEmployerDto employer = employers.get(0);
+
         assertEquals(200, response.getStatus());
         assertEquals(1, employers.size());
-        FavoriteEmployerDto employer = employers.get(0);
-        assertEquals(20, employer.getViewsCount());
+        assertEquals(21, employer.getViewsCount());
     }
 
     @Test
     public void afterFileSettingsThresholdEmployerBecomesPopular() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase();
+        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
         assertEquals(200, postResponse.statusCode());
-        Response response = null;
-        for (int i = 0; i < fileSettings.getInteger("popularity.settings") - 1; i ++) {
-            response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        }
-        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>(){});
-        assertEquals(200, response.getStatus());
+
+        IntStream.range(0, 48).forEach(i -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
+        Response response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
+        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>() {
+        });
         FavoriteEmployerDto employer = employers.get(0);
+
+        assertEquals(200, response.getStatus());
         assertEquals(49, employer.getViewsCount());
         assertEquals(Popularity.REGULAR, employer.getPopularity());
 
         response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        employers = response.readEntity(new GenericType<>(){});
-        assertEquals(200, response.getStatus());
+        employers = response.readEntity(new GenericType<>() {
+        });
         employer = employers.get(0);
+
+        assertEquals(200, response.getStatus());
         assertEquals(50, employer.getViewsCount());
         assertEquals(Popularity.POPULAR, employer.getPopularity());
     }
 
     @Test
-    public void counterIsThreadSafe() throws IOException, InterruptedException {
-        saveSingleEmployerToDatabase();
-        Executor executors = new ThreadPoolExecutor(
-                3, 3, 30, TimeUnit.SECONDS,
-                new LinkedBlockingQueue<>());
-        for (int i = 0; i < 500; i++) {
-            executors.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
-        }
-        Thread.sleep(5000);
+    public void counterIsThreadSafeForSingleEntry() throws IOException, InterruptedException {
+        saveSingleEmployerToDatabase("/employer.json");
+        ExecutorService executor = Executors.newFixedThreadPool(3);
+        IntStream.range(0, 200).forEach(i -> executor.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL)));
+        awaitExecutorTermination(executor);
+
         Employer employer = employerDao.getEager(employerId);
-        assertEquals(500, (int) employer.getViewsCount().getCounter());
+        assertEquals(200, (int) employer.getViewsCount().getCounter());
     }
 
     @Test
-    public void counterIsThreadSafeForMultipleEntries() throws IOException, InterruptedException {
+    public void counterIsThreadSafeForMultipleEntries() throws IOException {
         saveMultipleEmployersToDatabase(10);
-        ExecutorService executor = Executors.newFixedThreadPool(4);
-        /*Executor executors = new ThreadPoolExecutor(
-                3, 3, 30, TimeUnit.SECONDS,
-                new LinkedBlockingQueue<>());*/
-        for (int i = 0; i < 500; i++) {
-            executor.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
-        }
-
-        //Thread.sleep(12000);
-        for (int i = 1; i <= 10; i++) {
-            Employer employer = employerDao.getEager(i);
-            Integer counter = employer.getViewsCount().getCounter();
-            logger.info("Employer " + i + ". Views count: " + counter);
-            //assertEquals(500, (int) counter);
-        }
-        Thread.sleep(200);
-        for (int i = 1; i <= 10; i++) {
-            Employer employer = employerDao.getEager(i);
-            Integer counter = employer.getViewsCount().getCounter();
-            logger.info("Employer " + i + ". Views count: " + counter);
-            //assertEquals(500, (int) counter);
-        }
+        ExecutorService executor = Executors.newFixedThreadPool(3);
+        IntStream.range(0, 200).forEach(i -> executor.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL)));
+        awaitExecutorTermination(executor);
+        IntStream.range(1, 11)
+                .mapToObj(i -> employerDao.getEager(i))
+                .peek(employer -> logger.info(employer.getId() + " - " + employer.getName()))
+                .map(employer -> employer.getViewsCount().getCounter())
+                .peek(counter -> logger.info("Views count: " + counter))
+                .forEach(counter -> assertEquals(200, (int) counter));
     }
 
 
     @Test
     public void deleteEmployerWhileGettingFavorites() throws IOException, InterruptedException {
         saveMultipleEmployersToDatabase(10);
-        Executor executors = new ThreadPoolExecutor(
-                3, 3, 30, TimeUnit.SECONDS,
-                new LinkedBlockingQueue<>());
-        for (int i = 0; i < 500; i++) {
-            executors.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
-        }
-        HttpResponse response = executeDeleteRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + 2);
-        assertEquals(200, response.statusCode());
-        Thread.sleep(12000);
-        for (int i = 1; i <= 10; i++) {
-            if (i == 2) {
-                assertTrue(employerDao.get(Employer.class, 2).isEmpty());
-                logger.info("Employer " + i + " has been deleted");
-            } else {
-                Employer employer = employerDao.getEager(i);
-                Integer counter = employer.getViewsCount().getCounter();
-                logger.info("Employer " + i + ". Views count: " + counter);
-                //assertEquals(500, (int) counter);
+        ExecutorService executor = Executors.newFixedThreadPool(3);
+        for (int i = 0; i < 200; i++) {
+            if (i == 100) {
+                executor.execute(() -> executeDeleteRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + 2));
             }
+            executor.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
         }
+        awaitExecutorTermination(executor);
+        assertTrue(employerDao.get(Employer.class, 2).isEmpty());
+        IntStream.range(1, 11).filter(i -> i != 2)
+                .mapToObj(i -> employerDao.getEager(i))
+                .peek(employer -> logger.info(employer.getId() + " - " + employer.getName()))
+                .map(employer -> employer.getViewsCount().getCounter())
+                .peek(counter -> logger.info("Views count: " + counter))
+                .forEach(counter -> assertEquals(200, (int) counter));
     }
 
     @Test
@@ -258,13 +245,16 @@ public class EmployerResourceTest extends AppBaseTest {
 
     @Test
     public void putFavoriteEmployerEndpointShouldUpdateEmployerCommentInDatabase() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase();
+        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
         assertEquals(200, postResponse.statusCode());
+
         Employer employer = employerDao.getEager(employerId);
-        assertEquals("New comment", employer.getComment().getComment());
+        assertEquals(DEFAULT_COMMENT, employer.getComment().getComment());
+
         parametersMap.put("comment", "different comment");
         HttpResponse response = executePutRequestWithParams(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId, parametersMap);
         assertEquals(200, response.statusCode());
+
         Employer updatedEmployer = employerDao.getEager(employerId);
         assertEquals("different comment", updatedEmployer.getComment().getComment());
     }
@@ -278,13 +268,30 @@ public class EmployerResourceTest extends AppBaseTest {
     @Test
     public void deleteFavoriteEmployerEndpointShouldDeleteEmployerFromDatabase() throws IOException {
         exceptionRule.expect(NoResultException.class);
-        HttpResponse postResponse = saveSingleEmployerToDatabase();
+        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
         assertEquals(200, postResponse.statusCode());
+
         Employer employer = employerDao.getEager(employerId);
         assertNotNull(employer);
+
         HttpResponse response = executeDeleteRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId);
         assertEquals(200, response.statusCode());
         employerDao.getEager(employerId);
+    }
+
+    @Test
+    public void deleteFavoriteEmployerEndpointShouldDeleteEmployerCounterAndComment() throws IOException {
+        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
+        assertEquals(200, postResponse.statusCode());
+
+        assertFalse(employerDao.get(EmployerComment.class, employerId).isEmpty());
+        assertFalse(employerDao.get(EmployerCounter.class, employerId).isEmpty());
+
+        HttpResponse response = executeDeleteRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId);
+        assertEquals(200, response.statusCode());
+
+        assertTrue(employerDao.get(EmployerComment.class, employerId).isEmpty());
+        assertTrue(employerDao.get(EmployerCounter.class, employerId).isEmpty());
     }
 
     @Test
@@ -295,54 +302,97 @@ public class EmployerResourceTest extends AppBaseTest {
 
     @Test
     public void refreshFavoriteEmployerEndpointShouldUpdateEmployerFieldsInDatabase() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase();
+        HttpResponse postResponse = saveSingleEmployerToDatabase("/changed_employer.json");
         assertEquals(200, postResponse.statusCode());
+
+        EmployerDtoById jsonEmployer = getEmployerDtoFromJson("/changed_employer.json");
         Employer employer = employerDao.getEager(employerId);
-        employer.setName("Some name");
-        employer.setDescription("Some description");
-        Area area = new Area();
-        area.setId(1);
-        area.setName("Москва");
-        employer.setArea(area);
-        employerDao.update(employer);
-        employer = employerDao.getEager(employerId);
-        assertEquals("Some name", employer.getName());
-        assertEquals("Some description", employer.getDescription());
-        assertEquals(1, employer.getArea().getId());
-        assertEquals("Москва", employer.getArea().getName());
+        assertDtoFromJsonAndEntityAreSame(jsonEmployer, employer);
+
+        String jsonString = Files.readString(Path.of(JSON_BASE_PATH + "/employer.json"));
+        when(apiService.fetchEmployersFromApiById(employerId)).thenReturn(jsonString);
         HttpResponse response = executePostRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId + "/refresh");
         assertEquals(200, response.statusCode());
+
         employer = employerDao.getEager(employerId);
-        assertEquals("Black Wood", employer.getName());
-        assertEquals("Random description", employer.getDescription());
-        assertEquals(1381, employer.getArea().getId());
-        assertEquals("Black", employer.getArea().getName());
+        jsonEmployer = getEmployerDtoFromJson("/employer.json");
+        assertDtoFromJsonAndEntityAreSame(jsonEmployer, employer);
     }
 
-    private HttpResponse saveSingleEmployerToDatabase() throws IOException {
-        String jsonString = Files.readString(Path.of("src/test/resources/employer.json"));
+    @Test
+    public void refreshEmployerWhileGettingFavorites() throws IOException {
+        saveMultipleEmployersToDatabase(10);
+        ExecutorService executor = Executors.newFixedThreadPool(3);
+        String jsonString = Files.readString(Paths.get(JSON_BASE_PATH + "/employer.json"));
+        EmployerDtoById jsonEmployer = getEmployerDtoFromJson("/employer.json");
+        when(apiService.fetchEmployersFromApiById(1)).thenReturn(jsonString);
+        for (int i = 0; i < 200; i++) {
+            if (i == 100) {
+                executor.execute(() -> executePostRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + 1 + "/refresh"));
+            }
+            executor.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
+        }
+        awaitExecutorTermination(executor);
+        Employer employerEntity = employerDao.getEager(1);
+        assertDtoFromJsonAndEntityAreSame(jsonEmployer, employerEntity);
+        assertEquals(200, (int) employerEntity.getViewsCount().getCounter());
+        IntStream.range(1, 11)
+                .mapToObj(i -> employerDao.getEager(i))
+                .peek(employer -> logger.info(employer.getId() + " - " + employer.getName()))
+                .map(employer -> employer.getViewsCount().getCounter())
+                .peek(counter -> logger.info("Views count: " + counter))
+                .forEach(counter -> assertEquals(200, (int) counter));
+    }
+
+    private HttpResponse saveSingleEmployerToDatabase(String pathToJson) throws IOException {
+        String jsonString = Files.readString(Path.of(JSON_BASE_PATH + pathToJson));
         when(apiService.fetchEmployersFromApiById(employerId)).thenReturn(jsonString);
         parametersMap.put("employer_id", String.valueOf(employerId));
-        parametersMap.put("comment", "New comment");
-        HttpResponse response =  executePostRequestWithParams(FAVORITE_EMPLOYER_BASE_URL, parametersMap);
+        parametersMap.put("comment", DEFAULT_COMMENT);
+        HttpResponse response = executePostRequestWithParams(FAVORITE_EMPLOYER_BASE_URL, parametersMap);
         parametersMap.clear();
         return response;
     }
 
-    private void saveMultipleEmployersToDatabase(Integer numOfEmployers) throws IOException {
-        String jsonString = Files.readString(Path.of("src/test/resources/employer.json"));
+    private void saveMultipleEmployersToDatabase(Integer numOfEmployers) {
+        Area area = new Area();
+        area.setId(1);
+        area.setName("Area name");
         for (int i = 1; i <= numOfEmployers; i++) {
-            String employerJson = jsonString
-                    .replace("4849846", String.valueOf(i))
-                    .replace("Black Wood", "Black Wood " + i);
-            when(apiService.fetchEmployersFromApiById(employerId)).thenReturn(employerJson);
-            parametersMap.put("employer_id", String.valueOf(employerId));
-            parametersMap.put("comment", "New comment");
-            executePostRequestWithParams(FAVORITE_EMPLOYER_BASE_URL, parametersMap);
-            parametersMap.clear();
+            Employer employer = new Employer();
+            EmployerComment comment = new EmployerComment(DEFAULT_COMMENT);
+            EmployerCounter counter = new EmployerCounter();
+            comment.setEmployer(employer);
+            counter.setEmployer(employer);
+            employer.setId(i);
+            employer.setName("Random name " + i);
+            employer.setDescription("Random description");
+            employer.setArea(area);
+            employer.setComment(comment);
+            employer.setViewsCount(counter);
+            employerDao.save(employer);
         }
     }
 
+    private EmployerDtoById getEmployerDtoFromJson(String pathToJson) throws IOException {
+        String jsonString = Files.readString(Path.of(JSON_BASE_PATH + pathToJson));
+        return employerMapper.mapDataFromApiById(jsonString);
+    }
 
+    private void assertDtoFromJsonAndEntityAreSame(EmployerDtoById jsonDto, Employer entity) {
+        assertEquals(jsonDto.getId(), entity.getId());
+        assertEquals(jsonDto.getName(), entity.getName());
+        assertEquals(jsonDto.getDescription(), entity.getDescription());
+        assertEquals(jsonDto.getArea().getId(), entity.getArea().getId());
+        assertEquals(jsonDto.getArea().getName(), entity.getArea().getName());
+    }
+
+    private void assertDtoFromJsonAndDtoFromResponseAreSame(EmployerDtoById jsonDto, FavoriteEmployerDto responseDto) {
+        assertEquals(jsonDto.getId(), responseDto.getId());
+        assertEquals(jsonDto.getName(), responseDto.getName());
+        assertEquals(jsonDto.getDescription(), responseDto.getDescription());
+        assertEquals(jsonDto.getArea().getId(), responseDto.getArea().getId());
+        assertEquals(jsonDto.getArea().getName(), responseDto.getArea().getName());
+    }
 
 }
